<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:layout_marginStart="8dp"
	android:layout_marginTop="12dp"
	android:layout_marginEnd="8dp"
	android:orientation="vertical"
	tools:context=".AboutActivity">

	<TextView
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:text="@string/about_header"
		android:textSize="@dimen/h5" />

	<TextView
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:lineSpacingMultiplier="1.1"
		android:text="@string/about"
		android:textSize="18sp" />

	<TextView
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="10dp"
		android:lineSpacingMultiplier="1.1"
		android:text="@string/about_2"
		android:textSize="18sp" />


	<TextView
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="40dp"
		android:text="@string/about_privacy"
		android:textSize="@dimen/h5" />

	<TextView
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:lineSpacingMultiplier="1.1"
		android:text="@string/about_privacy_desc"
		android:textAlignment="textStart"
		android:textSize="18sp" />

</LinearLayout>